--- a/domain.yml
+++ b/domain.yml
@@ -2,19 +2,35 @@ intents:
   - default
   - greet
   - bye
+  - location_inform
+  - price_quote_request
+  - lance_fritz_request
 
 entities:
   - request
+  - car_id
+  - location
+  - origin
+  - destination
 
 slots:
   request:
     type: text
+  car_id:
+    type: text
+  location:
+    type: text
+  origin:
+    type: text
+  destination:
+    type: text
+  is_valid:
+    type: bool
 
 templates:
   utter_default:
     - "Can you rephrase that?"
     - "I didn't understand that."
-    - "Invalid request. Please try again."
     - "Sorry, I can't answer this question."
   utter_greet:
     - "Hi! I'm the UP Assistant. How can I help?"
@@ -25,9 +41,27 @@ templates:
     - "Bye!"
     - "Cya!"
     - "Goodbye!"
+  utter_invalid:
+    - "Invalid. Try again."
+    - "Yea...NO. Try again."
+    - "Nice try, but that's invalid."
+  utter_ask_origin:
+    - "What is your origin? (Omaha, NE)"
+  utter_ask_destination:
+    - "What is your destination (Omaha, NE)"
+  utter_lance_fritz:
+  - text: "You're welcome."
+    image: "https://www.up.com/cs/groups/public/@uprr/@corprel/documents/digitalmedia/img_up_exec-lance-fritz.jpg"
 
 actions:
   - utter_default
   - utter_greet
   - utter_bye
+  - utter_invalid
+  - utter_ask_origin
+  - utter_ask_destination
+  - utter_lance_fritz
   - actions.ActionGetRequest
+  - actions.ActionStoreOrigin
+  - actions.ActionStoreDestination
+  - actions.ActionGetPriceQuote
