--- a/models/current/dialogue/domain.yml
+++ b/models/current/dialogue/domain.yml
@@ -3,25 +3,66 @@ action_names:
 - utter_default
 - utter_greet
 - utter_bye
+- utter_invalid
+- utter_ask_origin
+- utter_ask_destination
+- utter_lance_fritz
 - action_get_request
+- action_store_origin
+- action_store_destination
+- action_get_price_quote
 actions:
 - utter_default
 - utter_greet
 - utter_bye
+- utter_invalid
+- utter_ask_origin
+- utter_ask_destination
+- utter_lance_fritz
 - actions.ActionGetRequest
+- actions.ActionStoreOrigin
+- actions.ActionStoreDestination
+- actions.ActionGetPriceQuote
 config:
   store_entities_as_slots: true
 entities:
 - request
+- car_id
+- location
+- origin
+- destination
 intents:
 - default
 - greet
 - bye
+- location_inform
+- price_quote_request
+- price_quote_inform
+- lance_fritz_request
 slots:
+  car_id:
+    initial_value: null
+    type: rasa_core.slots.TextSlot
+  destination:
+    initial_value: null
+    type: rasa_core.slots.TextSlot
+  is_valid:
+    initial_value: null
+    type: rasa_core.slots.BooleanSlot
+  location:
+    initial_value: null
+    type: rasa_core.slots.TextSlot
+  origin:
+    initial_value: null
+    type: rasa_core.slots.TextSlot
   request:
     initial_value: null
     type: rasa_core.slots.TextSlot
 templates:
+  utter_ask_destination:
+  - text: What is your destination (Omaha, NE)
+  utter_ask_origin:
+  - text: What is your origin? (Omaha, NE)
   utter_bye:
   - text: Bye!
   - text: Cya!
@@ -29,10 +70,16 @@ templates:
   utter_default:
   - text: Can you rephrase that?
   - text: I didn't understand that.
-  - text: Invalid request. Please try again.
   - text: Sorry, I can't answer this question.
   utter_greet:
   - text: Hi! I'm the UP Assistant. How can I help?
   - text: Welcome to the UP Assistant! Ask me anything!
   - text: I'm the UP Assistant! How can I be of service?
   - text: Hello there! I'm the UP Assistant! What can I do for you?
+  utter_invalid:
+  - text: Invalid. Try again.
+  - text: Yea...NO. Try again.
+  - text: Nice try, but that's invalid.
+  utter_lance_fritz:
+  - image: https://www.up.com/cs/groups/public/@uprr/@corprel/documents/digitalmedia/img_up_exec-lance-fritz.jpg
+    text: You're welcome.
