--- a/domain.yml
+++ b/domain.yml
@@ -4,6 +4,9 @@ intents:
   - bye
   - location_inform
   - price_quote_request
+  - car_id_inform
+  - car_status_request
+  - car_status_inform
   - lance_fritz_request
 
 entities:
@@ -48,7 +51,9 @@ templates:
   utter_ask_origin:
     - "What is your origin? (Omaha, NE)"
   utter_ask_destination:
-    - "What is your destination (Omaha, NE)"
+    - "What is your destination? (Omaha, NE)"
+  utter_ask_car_id:
+    - "What is the car id?"
   utter_lance_fritz:
   - text: "You're welcome."
     image: "https://www.up.com/cs/groups/public/@uprr/@corprel/documents/digitalmedia/img_up_exec-lance-fritz.jpg"
@@ -60,8 +65,11 @@ actions:
   - utter_invalid
   - utter_ask_origin
   - utter_ask_destination
+  - utter_ask_car_id
   - utter_lance_fritz
   - actions.ActionGetRequest
   - actions.ActionStoreOrigin
   - actions.ActionStoreDestination
   - actions.ActionGetPriceQuote
+  - actions.ActionGetCarStatus
+  - actions.ActionClearSlots
