--- a/models/current/dialogue/domain.yml
+++ b/models/current/dialogue/domain.yml
@@ -15,6 +15,7 @@ action_names:
 - action_get_car_status
 - action_get_car_eta
 - action_get_car_service_issues
+- action_get_car_last_completed_event
 - action_clear_slots
 actions:
 - utter_default
@@ -32,6 +33,7 @@ actions:
 - actions.ActionGetCarStatus
 - actions.ActionGetCarETA
 - actions.ActionGetCarServiceIssues
+- actions.ActionGetCarLastCompletedEvent
 - actions.ActionClearSlots
 config:
   store_entities_as_slots: true
@@ -54,6 +56,8 @@ intents:
 - car_eta_inform
 - car_service_issues_request
 - car_service_issues_inform
+- car_last_completed_event_request
+- car_last_completed_event_inform
 - lance_fritz_request
 slots:
   car_id:
