tried to do more info on service issues, but ran out of time

--- a/domain.yml
+++ b/domain.yml
@@ -2,6 +2,8 @@ intents:
   - default
   - greet
   - bye
+  - affirm
+  - deny
   - location_inform
   - price_quote_request
   - car_id_inform
@@ -71,12 +73,21 @@ templates:
           payload: "{car_id} status"
         - title: "ETA"
           payload: "{car_id} eta"
+        - title: "Service Issues"
+          payload: "{car_id} service issues"
         - title: "Description"
           payload: "{car_id} description"
         - title: "Last Completed Event"
           payload: "{car_id} last completed event"
         - title: "Next Scheduled Event"
           payload: "{car_id} next scheduled event"
+  utter_ask_specifics:
+    - text: "More specifics?"
+      buttons:
+        - title: "Yes"
+          payload: "yes"
+        - title: "No"
+          payload: "no"
   utter_lance_fritz:
   - text: "You're welcome. - Will B."
     image: "https://media.discordapp.net/attachments/470448093112827914/470454563409756170/image.jpg"
@@ -90,6 +101,7 @@ actions:
   - utter_ask_destination
   - utter_ask_car_id
   - utter_car_specifics
+  - utter_ask_specifics
   - utter_lance_fritz
   - actions.ActionGetRequest
   - actions.ActionStoreOrigin
@@ -100,6 +112,7 @@ actions:
   - actions.ActionGetCarStatus
   - actions.ActionGetCarETA
   - actions.ActionGetCarServiceIssues
+  - actions.ActionGetCarServiceIssuesURL
   - actions.ActionGetCarLastCompletedEvent
   - actions.ActionGetCarNextScheduledEvent
   - actions.ActionClearSlots
